--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -15,7 +15,7 @@
         
         <div id="Keys">
             <p id="Result"></p>
-            
+        //TABELA DO NUMEROS DA CALCULADORA 
         <table>
                 <tr>
                 <td><button class="botao" onclick="insert('%')">MOD</button></td>
