--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -17,6 +17,7 @@
             <p id="Result"></p>
         //TABELA DO NUMEROS DA CALCULADORA 
         <table>
+            <th>Tabela</th>
                 <tr>
                 <td><button class="botao" onclick="insert('%')">MOD</button></td>
                 
