--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -16,8 +16,8 @@
         <div id="Keys">
             <p id="Result"></p>
         //TABELA DO NUMEROS DA CALCULADORA 
-        <table>
-            <th>Tabela</th>
+        <th> <table>
+            </th>
                 <tr>
                 <td><button class="botao" onclick="insert('%')">MOD</button></td>
                 
